# labwatch_cli

./: .gitignore  README.md
.claude/: settings.local.json
.github/workflows/: publish.yml
cli/: README.md  pyproject.toml
cli/src/labwatch/: __init__.py  __main__.py  cli.py  config.py  discovery.py  heartbeat.py  lock.py  logging_setup.py  models.py  mount_builder.py  runner.py  scheduler.py  state.py  system_updater.py  updater.py  wizard.py
cli/src/labwatch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/src/labwatch/checks/: __init__.py  certs.py  command_check.py  dns.py  docker.py  home_assistant.py  http.py  mounts_check.py  network_check.py  nginx.py  ping.py  process_check.py  smart.py  system.py  systemd_check.py  updates_check.py
cli/src/labwatch/notifications/: __init__.py  ntfy.py
cli/tests/: conftest.py  test_certs_check.py  test_checks.py  test_cli_features.py  test_config_validation.py  test_discovery_systemd.py  test_env_vars.py  test_heartbeat.py  test_lock.py  test_logging_setup.py  test_motd.py  test_mount_builder.py  test_mounts_check.py  test_network_check.py  test_notifications.py  test_scheduler.py  test_smart_check.py  test_smart_validation.py  test_state.py  test_summarize.py  test_system_updater.py  test_timezone.py  test_updates_check.py  test_wizard_refactor.py
